--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^8.3.0",
     "vue-router": "^0.7.13",
+    "vue-scrollbar": "^1.0.4",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
