--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "fastclick": "^1.0.6",
-    "vue": "^1.0.21"
+    "vue": "^1.0.21",
+    "vue-touch": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
